<resources>
    <string name="app_name">projct</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign up</string>
    <string name="create_an_account">create an account</string>
    <string name="app">APP</string>
    <string name="dam">DAM</string>
    <string name="full_name">full name</string>
    <string name="enter_full_name_here">enter full name here</string>
    <string name="email">email</string>
    <string name="enter_email_here">enter email here</string>
    <string name="enter_date_of_birth">enter date of birth</string>
    <string name="date_of_birth">date of birth</string>
    <string name="enter_password">enter password</string>
    <string name="enter_address_here">enter address here</string>
    <string name="create_account">create account</string>
</resources>