<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_tv"
        android:textColor="@color/myPink"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"
            />

    <EditText
        android:id="@+id/username_etv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_tv"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:autofillHints="username"
        android:padding="20dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:layout_below="@id/username_etv"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/password_etv"
        android:layout_margin="10dp"
        android:padding="20dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_etv"
        android:backgroundTint="@color/myPink"
        android:text="@string/submit"
        android:textStyle="bold"
        android:id="@+id/submit_btn"

        />

    <TextView
        android:id="@+id/signup_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/submit_btn"
        android:clickable="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/myPink"
        android:textSize="20sp"
        android:textStyle="italic"


        />




</RelativeLayout>